# Automation-Test-Platform

./: .gitignore
codex-chrome-smoke/: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
codex-chrome-smoke/doc/: findings.md  icm-increment-architecture.md  icm-increment-prd.md  progress.md  task_plan.md
codex-chrome-smoke/docs/: environment-whitelist.md  execution-standard.md  icm-case-6-11-sequence.md  new-case-template.md
codex-chrome-smoke/icm_platform/: __init__.py  ai_service.py  api.py  assets.py  codegen_experiment_runtime.py  db.py  generation_control.py  paths.py  recorder.py  recorder_locator_recovery.py  recorder_runtime.py  run_views.py  worker.py
codex-chrome-smoke/prompt-templates/: PT-ICM-001-login-success.md  PT-ICM-002-homepage-load.md  PT-ICM-003-device-list-query.md  PT-ICM-004-device-detail-open.md  PT-ICM-005-logout-return-login.md  PT-ICM-006-device-create.md  PT-ICM-007-server-bind-device.md  PT-ICM-008-create-user.md  PT-ICM-009-user-bind-server-device.md  PT-ICM-010-screen-wall-remote-desktop.md  PT-ICM-011-cleanup-server-device-binding.md
codex-chrome-smoke/reports/: apply-report.md  patch-plan.json  patch-plan.md
codex-chrome-smoke/runner/: __init__.py  agent_actions.py  agent_codegen.py  agent_diagnose.py  agent_explore.py  agent_stage_router.py  asset_recorder.py  browser.py  case_expectations.py  case_login.py  cases.py  element_feedback.py  element_knowledge.py  element_knowledge_refresh.py  element_knowledge_report.py  element_library_validator.py  element_ref_matcher.py  element_retry_strategy.py  main.py  (+10 more)
(+211 files in other folders)
