[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-chrome-smoke"
version = "0.1.0"
description = "ICM browser smoke runner"
requires-python = ">=3.10"
dependencies = [
  "cryptography>=42",
  "fastapi>=0.115",
  "jinja2>=3.1",
  "playwright>=1.40",
  "pydantic>=2.8",
  "pypdf>=5.0",
  "python-docx>=1.1",
  "PyYAML>=6.0",
  "uvicorn[standard]>=0.30",
]

[tool.setuptools]
packages = ["runner", "runner.flows", "icm_platform"]
